# HybrIK

./: .gitignore  fetch_data.sh  pyproject.toml  test.ipynb
hybrik/: version.py
hybrik/utils/presets/: simple_transform_3d_smplx.py
scripts/: batch_process_image.py
